// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`conventions.md scaffold > empty analysis (analyzer failed) 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Conventions — test-project

## Naming Conventions

*Naming conventions not analyzed*

[Setup will add: Examples from codebase, exceptions to rules, team-specific preferences]

## Import Organization

*Import conventions not analyzed*

[Setup will add: Import grouping rules, alias patterns, ordering conventions]

## Code Style

[Setup will add: Line length, formatting rules, linter config, code style guide]

## Additional Conventions

[Setup will add: Team-specific conventions, file organization, comment style, other standards]

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;

exports[`conventions.md scaffold > flat Node project with partial conventions 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Conventions — test-project

## Naming Conventions

**Functions:** camelCase (confidence: 0.92)

[Setup will add: Examples from codebase, exceptions to rules, team-specific preferences]

## Import Organization

**Style:** relative
**Confidence:** 0.75

[Setup will add: Import grouping rules, alias patterns, ordering conventions]

## Code Style

[Setup will add: Line length, formatting rules, linter config, code style guide]

## Additional Conventions

[Setup will add: Team-specific conventions, file organization, comment style, other standards]

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;

exports[`conventions.md scaffold > rich Python project with full conventions 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Conventions — test-project

## Naming Conventions

**Files:** snake_case (confidence: 0.98)
**Variables:** snake_case (confidence: 0.95)
**Functions:** snake_case (confidence: 0.97)
**Classes:** PascalCase (confidence: 1.00)
**Constants:** SCREAMING_SNAKE_CASE (confidence: 0.90, mixed)
  Distribution: SCREAMING_SNAKE_CASE: 90%, UPPER_CASE: 10%

[Setup will add: Examples from codebase, exceptions to rules, team-specific preferences]

## Import Organization

**Style:** absolute
**Confidence:** 0.85
**Distribution:** absolute: 85%, relative: 15%

[Setup will add: Import grouping rules, alias patterns, ordering conventions]

## Code Style

**Indentation:** spaces (4 spaces)
**Confidence:** 1.00 (from config file)

[Setup will add: Line length, formatting rules, linter config, code style guide]

## Additional Conventions

[Setup will add: Team-specific conventions, file organization, comment style, other standards]

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;
